quick fix - go back to java 17 from 21